--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,16 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa') // 1
+    compile('com.h2database:h2') //2
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+// 1
+// 스프링 부트용 Spring Data Jpa 추상화 라이브러리
+// 스프링 부트 버전에 맞춰 자동으로 JPA관련 라이브러리들의 버전을 관리해줍니다.
+
+// 2
+// 인메모리 관계형 데이터베이스입니다.
+// 별도의 설치가 필요없이 프로젝트 의존성만으로 관리할 수 있음.
+// 메모리에서 실행되기 때문에 애플리케이션을 재시작할때마다 초기화 된다는 점을 이용하여 테스트용도로 씀
+// 테스트 로컬환경에서만 쓸 예정
