--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa') // 1
     compile('com.h2database:h2') //2
     compile('org.springframework.boot:spring-boot-starter-mustache')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client') //소셜 로그인 등 클라이언트 입장에서 소셜 기능
+    testCompile('org.springframework.boot:spring-boot-starter-test')     // 필요한 의존성입니다.
 }
 // 1
 // 스프링 부트용 Spring Data Jpa 추상화 라이브러리
