--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,9 @@ dependencies {
     compile('com.h2database:h2') //2
     compile('org.springframework.boot:spring-boot-starter-mustache')
     compile('org.springframework.boot:spring-boot-starter-oauth2-client') //소셜 로그인 등 클라이언트 입장에서 소셜 기능
+    compile('org.springframework.session:spring-session-jdbc')
     testCompile('org.springframework.boot:spring-boot-starter-test')     // 필요한 의존성입니다.
+    testCompile('org.springframework.security:spring-security-test')
 }
 // 1
 // 스프링 부트용 Spring Data Jpa 추상화 라이브러리
